# sgrust

./: CHANGELOG.md  Cargo.toml  README.md
benches/: combination_grid.rs  dynamic_linear_grid.rs  linear_grid.rs
examples/: combination_grid.rs  linear_grid.rs
src/: adjacency_data.rs  algorithms.rs  basis.rs  bounded_sum_iterator.rs  const_generic.rs  dynamic.rs  errors.rs  generators.rs  grids.rs  hierarchisation.rs  iterators.rs  lagrange.rs  lib.rs  multi_index_manipulation.rs  one_dimensional_nodes.rs  rules.rs  serialization.rs  storage.rs  tables.rs  utilities.rs
src/algorithms/: affected_basis_functions.rs  basis_evaluation.rs  basis_evalution_with_boundary.rs  coarsening.rs  integration.rs  interpolation.rs  refinement.rs  sweep.rs
src/basis/: base.rs  clenshaw_curtis.rs  custom_nested.rs  gauss_legendre.rs  gauss_patterson.rs  gl_tables.rs  global.rs  linear.rs
src/const_generic/: algorithms.rs  generators.rs  grids.rs  iterators.rs  storage.rs
src/const_generic/algorithms/: basis_evaluation.rs  basis_evalution_with_boundary.rs  coarsening.rs  hierarchisation.rs  interpolation.rs  refinement.rs  sweep.rs
src/const_generic/grids/: immutable_linear_grid.rs  linear_grid.rs  sparse_grid.rs
src/const_generic/iterators/: grid_iterator.rs  grid_iterator_cache.rs  step_iterator.rs
src/const_generic/refinement/: surplus.rs  user_defined.rs
src/const_generic/storage/: dynamic_linear_grid.rs
src/dynamic/: algorithms.rs  generators.rs  iterators.rs  refinement.rs  storage.rs
src/dynamic/algorithms/: basis_evaluation.rs  basis_evalution_with_boundary.rs  coarsening.rs  hierarchisation.rs  interpolation.rs  interpolation_state.rs  refinement.rs  sweep.rs
src/dynamic/grids/: combination_grid.rs  linear_grid.rs  sparse_grid.rs
src/dynamic/iterators/: advanced_step_iterator.rs  dynamic_grid_iterator.rs  grid_iterator_cache.rs
src/dynamic/refinement/: surplus.rs  user_defined.rs
src/generators/: base.rs  linear.rs
src/grids/: combination_grid.rs  immutable_linear_grid.rs  linear_grid.rs  sparse_grid.rs
src/iterators/: advanced_step_iterator.rs  grid_iterator.rs  grid_iterator_cache.rs  step_iterator.rs
src/refinement/: surplus.rs  user_defined.rs
src/storage/: adjacency_data.rs  linear_grid.rs
src/tables/: clenshaw_curtis_table.rs  gauss_patterson_table.rs
src/utilities/: float.rs  multi_index_manipulation.rs
