[package]
name = "sgrust"
version = "0.4.6"
edition = "2021"
license = "MIT"
keywords = ["sparsegrid", "interpolation"]
description = "A sparse grid library written in Rust."
repository = "https://github.com/mattrjackson/sgrust"

[dependencies]
bincode = {version = "2.0.1", features = ["serde"] }
bitfield-struct = "0.10.0"
indexmap = "2.7.0"
kdtree = { version = "0.7.0" }
lz4_flex = "0.11.3"
num-traits = "0.2.19"
rayon = "1.10.0"
rustc-hash = "2.0.0"
rustfft = "6.2.0"
serde = { version = "1.0.203", features = ["serde_derive"] }
serde_with = "3.9.0"
static_init = "1.0.3"

[dev-dependencies]
libm = "0.2.8"
criterion = "0.5.1"

[profile.test]
opt-level = 3

[profile.dev]
opt-level = 3

[profile.release]
debug = false 

[[bench]]
name = "linear_grid"
harness = false

[[bench]]
name = "combination_grid"
harness = false
