[package]
name = "sgrust"
version = "0.6.0"
edition = "2021"
license = "MIT"
keywords = ["sparsegrid", "interpolation"]
description = "A sparse grid library written in Rust."
repository = "https://github.com/mattrjackson/sgrust"

[dependencies]
bincode = { version="2.0.1", features = ["serde"] }
bitfield-struct = "0.11.0"
indexmap = "2.10.0"
kdtree = "0.7.0"
lz4_flex = "0.11.5"
num-traits = "0.2.19"
rayon = {version = "1.10.0", optional = true }
rustc-hash = "2.1.1"
rustfft = "6.4.0"

serde = {version ="1.0.219", features = ["derive"] }
serde_with = {version = "3.14.0", features = ["macros"] }
static_init = "1.0.4"

[dev-dependencies]
libm = "0.2.15"
criterion = "0.5.1"

[features]
default = []

rayon = ["dep:rayon"]

[profile.test]
opt-level = 3

[profile.release]
opt-level = 3
debug = true